# osm-feature-extractor

./: .gitignore  README.md  environment.yml  proj.conf  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
feature_extractor/: main.py
feature_extractor/data/base_data/: isle-of-wight.geojson
feature_extractor/feature_augmenting/: FEATURES.md  data_preparation.py  features_augmenter.py
feature_extractor/feature_extraction/: osm_analyzer.py  osm_datamodel.py  osm_extractor.py  osm_extractor_augmenter.py  osm_extractor_batches.py
feature_extractor/utils/: config_parser.py
osm_feature_extractor/: main.py
osm_feature_extractor/feature_augmenting/: data_preparation.py  features_augmenter.py  features_to_tags.py
osm_feature_extractor/feature_extraction/: osm_analyzer.py  osm_datamodel.py  osm_extractor_augmenter.py  osm_extractor_batches.py
osm_feature_extractor/utils/: config_parser.py
population_model/: main.py
population_model/data/kontur-tiles-pop/: area_8-124-80.geojson  area_8-124-81.geojson  area_8-124-84.geojson  area_8-124-85.geojson  area_8-124-86.geojson  (+6 more)
population_model/feature_augmenting/: STRATEGY.md  data_preparation.py  features_augmenter.py  features_to_tags.py
population_model/feature_engineering/: data_preparation.py
population_model/feature_extraction/: osm_analyzer.py  osm_datamodel.py  osm_extractor.py  osm_extractor_augmenter.py  osm_extractor_batches.py  osm_handler.py
population_model/notebooks/: population-hexagons-exploration.ipynb
population_model/utils/: config_parser.py  logger.py
(+12 files in other folders)
