[tool.poetry]
name = "osm-feature-extractor"
version = "0.1.0"
description = "Library to extract OSM features and map them to GeoJSON polygons."
authors = ["Diogo Matos Chaves <diogo_chaves@hotmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/diogomatoschaves/osm-feature-extractor"
keywords = ["osm", "feature-augmentation", "feature-extractor", "osm-features"]
packages = [{include = "osm_feature_extractor"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
geopandas = "^1.0.1"
numpy = "^2.0.1"
matplotlib = "^3.9.2"
keplergl = "^0.3.2"
ordered-set = "^4.1.0"
osmium = "^3.7.0"
pyturf = "^0.6.10"
traittypes = "^0.2.1"
Rtree = "^1.3.0"
scipy = "^1.14.0"

[tool.poetry.scripts]
osm_feature_extractor = 'osm_feature_extractor.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
